[package]
name = "romaji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
quick-xml = "0.30.0"
reqwest = "0.11.22"
tokio = { version = "1.32.0", features = ["full"] }
